# Base_OpenGL_SDL2_ImGUI

./: .gitignore  .gitmodules  CMakeLists.txt
dependencies/ImGUI/: CMakeLists.txt
dependencies/ImGUI/include/: imgui_impl_opengl3_loader.h
src/: main.cpp
